fix(app): reduce bundle size+title alignment

--- a/mylc-frontend/src/app/components/category-container/category-container.component.scss
+++ b/mylc-frontend/src/app/components/category-container/category-container.component.scss
@@ -1,6 +1,8 @@
 mat-panel-title {
     justify-content: center;
     font-size: 20px;
+    margin:0;
+    padding: 10px 0;
 }
 mat-expansion-panel {
     align-items: center;
