--- a/mylc-frontend/src/styles.scss
+++ b/mylc-frontend/src/styles.scss
@@ -273,4 +273,6 @@ body {
 div.mat-expansion-panel-body {
   padding: 0 !important;
 }
-
+span.mat-content-hide-toggle {
+  margin: 0 !important;
+}
